# fintelligence

./: .env.example  .gitignore  LICENSE  README.md  app.py  config.py  example_extractor.sh  example_qa_chat.py  pyproject.toml  tesla_report.txt  test_persistent_storage.py  test_refactored_qa.py  test_report.txt  to-do.md
docs/: architecture.md  cheat_sheet.md
examples/: basic_qa.py  basic_scraper.py  chat_qa.py
scripts/: extractor.py  qa_engine.py
src/investor_relations_scraper/: __init__.py  cli.py  config.py  conversation_memory.py  document_loader.py  qa_engine.py  scraper.py  search.py  table_db.py
src/investor_relations_scraper/extractors/: __init__.py  base.py  metadata_extractors.py  pdf_extractors.py
tests/: test_conversation_memory.py  test_persistent_storage.py  test_refactored_qa.py  test_table_db.py  test_text_chunking.py
