[project]
name = "investor-relations-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.11.11",
    "beautifulsoup4>=4.14.3",
    "faiss-cpu>=1.7.0",
    "numpy>=1.26.0",
    "openai>=1.12.0",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "playwright>=1.48.0",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=2.3.0",
    "torch>=2.2.0",
]
