[project]
name = "investor-relations-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "gradio==4.36.0",
    "numpy>=2.4.2",
    "openai>=2.21.0",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.3",
    "tabulate>=0.9.0",
    "torch>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/investor_relations_scraper"]
dependencies = [
    "faiss-cpu>=1.7.0",
    "numpy>=1.26.0",
    "openai>=1.12.0",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=2.3.0",
    "torch>=2.2.0",
    "gradio==4.36.0",
    "tabulate>=0.9.0",
]

[project.scripts]
ir-extractor = "investor_relations_scraper.cli:main"
